--- a/css/contato.css
+++ b/css/contato.css
@@ -81,7 +81,13 @@ section {
 }
 
 section ul{
-    font-size: 22px;
+    font-size: 18px;
+}
+
+section a{
+    font-size: 18px;
+    color: black;
+    align-items: center;
 }
 
 section ul img{
